--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -6,7 +6,8 @@
 ## FIXME! how to do it once only!
 ## Note: more a reset as next login, will ask to change password...
 - name: Check if admin pass already set
-  ansible.builtin.stat: path="{{ misp_rootdir }}/.admin_pass_set"
+  ansible.builtin.stat:
+    path: "{{ misp_rootdir }}/.admin_pass_set"
   register: ap
 - name: Set admin password
   # ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake Password \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
