default: set centos:7 as experimental - ssl

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -23,7 +23,8 @@ jobs:
           - molecule_distro: 'rockylinux:8'
             experimental: false
           - molecule_distro: 'centos:7'
-            experimental: false
+            # SSL CERTIFICATE_VERIFY_FAILED remirepo
+            experimental: true
           - molecule_distro: 'ubuntu:22.04'
             experimental: true
           - molecule_distro: 'ubuntu:20.04'
