redhat-remi: ensure is defined

--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -62,7 +62,7 @@
   ansible.builtin.command: "dnf module reset php -y"
   when:
     - ansible_distribution_major_version | int >= 8
-    - ansible_facts.packages['php-fpm']
+    - ansible_facts.packages['php-fpm'] is defined
     - ansible_facts.packages['php-fpm'][0]['version'] is version_compare('7.4', '<')
 - name: RHEL8 | enable remi repository for php
   ansible.builtin.command: "dnf module enable php:remi-7.4 -y"
