redhat powertools: enable via config-manager

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -14,19 +14,15 @@
   when: ansible_os_family == "RedHat"
 
 - name: RedHat8+ | Enable PowerTools repo
-  community.general.ini_file:
-    dest: /etc/yum.repos.d/CentOS-Stream-PowerTools.repo
-    section: powertools
-    option: "{{ item.o }}"
-    value: "{{ item.v }}"
-    mode: '0644'
-  with_items:
-    - { o: enabled, v: '1' }
-    - { o: baseurl, v: 'http://mirror.centos.org/$contentdir/$releasever/PowerTools/$basearch/os/' }
+  ansible.builtin.command: dnf config-manager --set-enabled powertools
+  become: yes
   when:
     - ansible_os_family == "RedHat"
     - ansible_distribution_major_version | int >= 8
 
+- name: Check available repositories - list
+  ansible.builtin.command: ls -l /etc/yum.repos.d/
+  changed_when: false
 - name: Check available repositories
   ansible.builtin.command: dnf repolist
   changed_when: false
