default-kitchen: switch to lxd snap

--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -77,7 +77,8 @@ jobs:
         run: |
           set -x
           sudo apt-get update -qq
-          sudo apt-get -y install lxd acl dnsmasq-base zfsutils-linux -q
+          sudo apt-get -y install acl dnsmasq-base zfsutils-linux -q
+          sudo snap install lxd
           whoami
           grep lxd /etc/group
           echo "# remote list"
