--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -59,6 +59,8 @@ misp_db_user: misp
 misp_db_pass: mispdb_pass_to_change_fast
 misp_web_user: admin@admin.test
 misp_web_pass: admin_pass_to_change_fast
+misp_supervisorhttp_user: supervisorhttp
+misp_supervisorhttp_pass: PWD_CHANGE_ME
 ## extra users, the password is only valid once. user will be asked to update
 ## orgid (default): 1/ORGNAME
 ## roleid (default): 1/admin, 2/OrgAdmin, 3/user, 4/publisher, 5/sync user, 6/readonly
