--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -28,4 +28,5 @@
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
   roles:
+    - juju4.harden_apache
     - juju4.misp
