--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -27,6 +27,8 @@
       when: >
         (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 16) or
         (ansible_os_family == "RedHat" and ansible_distribution_major_version | int >= 8)
+  vars:
+    harden_php_allow_url_fopen: On
   roles:
     - juju4.harden_apache
     - juju4.misp
