--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -36,7 +36,7 @@ jobs:
             version: '18.04'
             version2: 1804
             suite: default
-            experimental: false
+            experimental: true
           - distribution: ubuntu
             version: '20.04'
             version2: 2004
