--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -30,7 +30,7 @@ jobs:
           - molecule_distro: 'ubuntu:20.04'
             experimental: false
           - molecule_distro: 'ubuntu:18.04'
-            experimental: false
+            experimental: true
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       MOLECULE_NO_LOG: "false"
