fix(background-jobs): add supervisor_conf var as different path for redhat/ubuntu

--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -102,6 +102,7 @@ ssl_user: root
 ssl_dir: /etc/pki/tls/certs
 ssl_privatedir: /etc/pki/tls/private
 
+supervisor_conf: /etc/supervisord.conf
 supervisor_confdir: /etc/supervisord.d
 supervisor_ext: ini
 supervisor_service: supervisord
