--- a/tasks/background-jobs.yml
+++ b/tasks/background-jobs.yml
@@ -43,7 +43,7 @@
 
 - name: Add http server for supervisord
   ansible.builtin.blockinfile:
-    path: /etc/supervisor/supervisord.conf
+    path: "{{ supervisor_conf }}"
     mode: '0644'
     block: |
       [inet_http_server]
