Replace default MISP admin by {{ misp_web_user }}
  * ensure we do have 'misp_web_user' set the way we expect;
  * we run this task before running user_init;
  * the default MISP admin user is set to admin@admin.test (see source code);
  * by replacing that on this block we ensure 'misp_web_user' is
    properly generated (key, passwd and permissions).

https://github.com/MISP/MISP/blob/2.4/app/Model/User.php#L1066
https://www.circl.lu/doc/misp/quick-start/

--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -10,6 +10,11 @@
 - name: Key file
   when: not skey.stat.exists or skey.stat.size == 0
   block:
+    - name: Replace default MISP admin by "{{ misp_web_user }}" before running userInit
+      ansible.builtin.replace:
+        dest: "{{ misp_rootdir }}/app/Model/User.php"
+        regexp: 'admin@admin.test'
+        replace: "{{ misp_web_user }}"
     - name: Generate key file - cake userInit
       ansible.builtin.shell: "{{ misp_rootdir }}/app/Console/cake userInit -q | tee {{ misp_key_file }}"
       args:
