--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -12,12 +12,16 @@
   block:
     - name: Replace default MISP admin by "{{ misp_web_user }}" before running userInit
       ansible.builtin.replace:
-        dest: "{{ misp_rootdir }}/app/Model/User.php"
+        dest: "{{ d }}"
         regexp: 'admin@admin.test'
         replace: "{{ misp_web_user }}"
         mode: '0640'
         owner: "{{ www_user }}"
         group: "{{ www_user }}"
+      loop:
+        - "{{ misp_rootdir }}/app/Model/User.php"
+      loop_control:
+        loop_var: d
     - name: Generate key file - cake userInit
       ansible.builtin.shell: "{{ misp_rootdir }}/app/Console/cake userInit -q | tee {{ misp_key_file }}"
       args:
