--- a/tasks/background-jobs.yml
+++ b/tasks/background-jobs.yml
@@ -17,13 +17,14 @@
     - "{{ misp_rootdir }}/app/Vendor/composer/InstalledVersions.php"
     # - "{{ misp_rootdir }}/app/Vendor/composer/autoload.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/autoload_classmap.php"
-    # - "{{ misp_rootdir }}/app/Vendor/composer/autoload_files.php"
+    - "{{ misp_rootdir }}/app/Vendor/composer/autoload_files.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/autoload_namespaces.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/autoload_psr4.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/autoload_real.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/autoload_static.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/platform_check.php"
     - "{{ misp_rootdir }}/app/Vendor/composer/ClassLoader.php"
+  failed_when: false
 
 - name: Install PHP composer dependencies for background-jobs
   community.general.composer:
