--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,8 +22,10 @@ misp_git_update_force: false
 
 misp_pip_cybox_version: '2.1.0.20'
 misp_pip_stix_version: '1.2.0.7'
+# v2.4.167/dec 2022 is the last one supporting python <3.10
 # overridden by misp-modules REQUIREMENTS
-misp_pymisp_version: 'v2.4.143'
+# https://github.com/MISP/misp-modules/blob/main/REQUIREMENTS
+misp_pymisp_version: 'v2.4.162'
 # HEAD in misp-modules REQUIREMENTS
 misp_latest_pymisp: false
 
